--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
 
     "autoload": {
         "psr-0": {
-            "Foundershub\\StartupWeekendBundle": ""
+            "Foundershub\\Bundle\\StartupWeekendBundle": ""
         }
     },
 
