--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
 
     "require": {
         "php": ">=5.3.9",
-        "symfony/framework-bundle": "~2.3"
+        "symfony/framework-bundle": "~2.3",
+        "abraham/twitteroauth": "0.2.x",
+        "dothiv/dothiv-valueobject-bundle": "1.x"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
@@ -37,5 +39,21 @@
         }
     },
 
-    "target-dir": "Foundershub/Bundle/StartupWeekendBundle"
+    "target-dir": "Foundershub/Bundle/StartupWeekendBundle",
+
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "abraham/twitteroauth",
+                "type": "package",
+                "version": "0.2.0.3",
+                "dist": {
+                    "url": "https://github.com/abraham/twitteroauth/archive/0.2.0-beta3.zip",
+                    "type": "zip"
+                }
+            }
+        }
+    ]
+
 }
