--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": ">=5.3.9",
         "symfony/framework-bundle": "~2.3",
-        "abraham/twitteroauth": "0.2.x",
+        "abraham/twitteroauth": "0.2.0.3",
         "dothiv/dothiv-valueobject-bundle": "1.x"
     },
     "require-dev": {
