--- a/Resources/config/contentful.yml
+++ b/Resources/config/contentful.yml
@@ -49,3 +49,12 @@ services:
             - 'avatar'
         tags:
             - { name: dothiv_contentful.event_listener, event: dothiv.contentful.view.create, method: onViewCreate }
+
+    startupweekend.contentful.team_avatar_listener:
+        class: %dothiv_contentful.view_create.image_listener.class%
+        arguments:
+            - @dothiv_contentful.image_asset_scaler
+            - 'Team'
+            - 'avatar'
+        tags:
+            - { name: dothiv_contentful.event_listener, event: dothiv.contentful.view.create, method: onViewCreate }
