Improve cache headers. Fixes foundershub/StartupWeekend#1.

--- a/Resources/config/contentful.yml
+++ b/Resources/config/contentful.yml
@@ -58,3 +58,11 @@ services:
             - 'avatar'
         tags:
             - { name: dothiv_contentful.event_listener, event: dothiv.contentful.view.create, method: onViewCreate }
+
+    startupweekend.contentful.controller.page:
+        class: %dothiv_contentful.controller.page.class%
+        arguments:
+          - @dothiv_contentful.request_lastmodified_cache
+          - @templating
+          - @dothiv_contentful.clock
+          - 3600
