chore(Author): Changed domain

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         },
         {
             "name": "Markus Tacker",
-            "email": "m@cto.hiv",
-            "homepage": "https://cto.hiv/",
+            "email": "m@coderbyheart.com",
+            "homepage": "https://coderbyheart.com/",
             "role": "Developer"
         }
     ],
